version/0.16/_sources/api/solver/_autosummary/settings/mixture.rst.txt
:orphan:

.. _mixture:

mixture
=======

.. autoclass:: ansys.fluent.core.solver.settings_232.mixture.mixture
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`mixture_child <mixture_child>`


.. rubric:: Included in:

============================   ======================

Parent                                        Summary

============================   ======================
:ref:`materials <materials>`       'materials' child.

============================   ======================

